fix(submission): fix submission page mobile view testcase items not aligned

--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -119,12 +119,14 @@
 }
 
 @media only screen and (max-width: 424px) {
-  .testcaseColumnTitle,
-  .testcaseColumnScore {
-    margin-right: -7px;
-  }
+  .subtaskContent {
+    .testcaseColumnTitle,
+    .testcaseColumnScore {
+      margin-right: -7px;
+    }
 
-  .testcaseColumnTime {
-    margin-right: 1px;
+    .testcaseColumnTime {
+      margin-right: 1px;
+    }
   }
 }
